# disappointed-copilot

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
assets/audio/: voice_pack.schema.yaml
config/: default.yaml  desktop_dev.yaml  pi_deploy.yaml
deploy/: disappointed.service  install_pi.sh  requirements-pi.txt
scripts/: benchmark.py  calibrate_roi.py  export_model.py  generate_prebaked_audio.py
src/disappointed/: __init__.py  __main__.py  app.py
src/disappointed/audio/: player.py  queue.py
src/disappointed/camera/: base.py  file_source.py  picamera_source.py  webcam_source.py
src/disappointed/commentary/: base.py  llm_engine.py  personas.py  piper_tts.py  prebaked.py
src/disappointed/config/: loader.py  schema.py
src/disappointed/detection/: base.py  coral_detector.py  models.py  tracker.py  ultralytics_detector.py
src/disappointed/lane/: detector.py  models.py
src/disappointed/pipeline/: coordinator.py  frame_data.py
src/disappointed/recording/: buffer.py  clip_extractor.py  overlay.py
src/disappointed/triggers/: base.py  green_light.py  hard_brake.py  models.py  registry.py  self_critique.py  swerver.py  tailgater.py
src/disappointed/utils/: fps.py  math_utils.py  thermal.py
tests/: conftest.py
tests/unit/: test_audio_queue.py  test_config_loader.py  test_detection_models.py  test_fps.py  test_personas.py  test_ring_buffer.py  test_tracker.py  test_triggers_self_critique.py  test_triggers_tailgater.py
