[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disappointed-copilot"
version = "0.1.0"
description = "AI dashcam that roasts bad drivers with sarcastic commentary"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8",
    "ultralytics>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pygame>=2.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
llm = [
    "httpx>=0.25",
]
pi = [
    "picamera2>=0.3",
    "pycoral>=2.0",
    "tflite-runtime>=2.14",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
disappointed = "disappointed.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
